Integrate Firebase Cloud Messaging for push notifications. Add necessary permissions in AndroidManifest.xml and implement notification handling in MainActivity. Update UnitechHRApplication to initialize Firebase and create a notification channel. Enhance MyApplicationsFragment with a test notification feature using a FloatingActionButton. Update dependencies in build.gradle.kts and libs.versions.toml for Firebase Messaging support.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name=".UnitechHRApplication"
@@ -26,6 +27,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <!-- Firebase Cloud Messaging Service -->
+        <service
+            android:name=".services.FCMService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        
+        <!-- Default FCM notification icon -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_assessment" />
+        
+        <!-- Default FCM notification color -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/blue" />
         
         <!-- Downloadable font provider metadata -->
         <meta-data
